--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,11 @@ h5 {
     background-color: #7dba5c;
     margin: 30px 0 50px 0
 }
+
+.appstore {
+   width:145px;
+}
+
 .full-divider {
     width: 100%;
     height: 1px;
